--- a/linux/T480/.config/i3/config
+++ b/linux/T480/.config/i3/config
@@ -179,28 +179,31 @@ for_window [class="dolphin"] floating enable, resize set 1400 750, move position
 for_window [class="realvnc-vncviewer"] move to workspace $ws11
 for_window [class="Vncviewer"] floating enable; move center; move scratchpad
 
-# Scratchpad with dropdown terminal. Not a very good choice to use `konsole` for
+# Scratchpad with dropdown_terminal terminal. Not a very good choice to use `konsole` for
 # this purpose. Order may matter, although not tested.
 
-for_window [class="^URxvt$" title="^dropdown"] move scratchpad
-exec --no-startup-id urxvt -name dropdown
-for_window [class="^URxvt$" title="^dropdown"] floating enable
-for_window [class="^URxvt$" title="^dropdown"] move scratchpad
-for_window [class="^URxvt$" title="^dropdown"] scratchpad show
-for_window [class="^URxvt$" title="^dropdown"] resize set 1200 650
-for_window [class="^URxvt$" title="^dropdown"] scratchpad show
+# exec --no-startup-id urxvt -name dropdown_terminal
+for_window [instance="dropdown_*"] floating enable, resize set 1200 650, move center
+
+# Settings for specific usage.
+for_window [class="^URxvt$" instance="dropdown_terminal"] move scratchpad
+
+# Start a dropdown terminal widnow.
+exec --no-startup-id urxvt -name dropdown_terminal
 
 # bindsym F12 scratchpad show; move position center
-# bindsym F12 [class="^konsole$" title="^dropdown"] scratchpad show; move position center
+# bindsym F12 [class="^konsole$" instance="dropdown_terminal"] scratchpad show; move position center
 # bindsym F12 [class="^konsole$"] scratchpad show; move position center
-bindsym F12 [class="^URxvt$" title="^dropdown"] scratchpad show
-bindsym $mod+F12 exec --no-startup-id urxvt -name dropdown; [class="^URxvt$" title="^dropdown"] scratchpad show
+bindsym F12 [class="^URxvt$" instance="dropdown_terminal"] scratchpad show
+bindsym $mod+F12 exec --no-startup-id urxvt -name dropdown_terminal
 bindsym $mod+shift+minus move scratchpad
+
 # Show every scratchpad window but URxvt.
-bindsym $mod+minus [class="^(?!URxvt$)" title="^(?!dropdown$)"] scratchpad show
-# Show every URxvt scratchpad window other than scratchpad.
-bindsym $mod+shift+i [class="^URxvt$" title="^(?!dropdown$)"] scratchpad show
-# bindsym $mod+minus [title="^(?!dropdown*$)"] scratchpad show
+bindsym $mod+minus [class="^(?!URxvt$)" instance="^(?!dropdown_.*$)"] scratchpad show
+
+# Show every URxvt scratchpad window.
+bindsym $mod+shift+i [class="^URxvt$" instance="^(?!dropdown_.*$)"] scratchpad show
+# bindsym $mod+minus [instance="^(?!dropdown*$)"] scratchpad show
 
 # Toggle wifi on and off
 bindsym $mod+Shift+Escape exec wifi_toggle.sh
@@ -330,6 +333,9 @@ exec redshift -O 3700
 
 # Search in Firefox from dmenu.
 bindsym $mod+g exec dmenu_search.sh
+
+# Search for words through dmenu.
+bindsym $mod+m exec dmenu_dict.sh
 
 # Transparency.
 bindsym $mod+c exec trans_dec.sh
