--- a/linux/T480/.config/i3/config
+++ b/linux/T480/.config/i3/config
@@ -53,7 +53,8 @@ bindsym $mod+q mode $close
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu='dmenu -b'     # Give dmenu commands like this.
+# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu='dmenu -b'     # Give dmenu commands like this.
+ bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 bindsym $mod+Shift+d exec dolphin
 
 # change focus
