T480: Single script for all dmenu functions.
    * dmenu_input.sh
        * Script for searching google and dictionary merged into this
          script.
        * Added functionality to search into manual pages.

    * i3config
        * Added script to search in manual pages.

Signed-off-by: Chinmay Chhajed <chinmay.chhajed@espressif.com>

--- a/linux/T480/.config/i3/config
+++ b/linux/T480/.config/i3/config
@@ -334,11 +334,12 @@ exec XDG_CURRENT_DESKTOP=KDE
 
 exec redshift -O 3700
 
-# Search in Firefox from dmenu.
-bindsym $mod+g exec dmenu_search.sh
+# Google search from dmenu.
+bindsym $mod+g exec dmenu_input.sh -g
 
-# Search for words through dmenu.
-bindsym $mod+m exec dmenu_dict.sh
+
+bindsym $mod+m exec dmenu_input.sh -d       # Search in dictionary.
+bindsym $mod+Shift+m exec dmenu_input.sh -m       # Open manual page.
 
 # wallpaper
 exec new_wall.sh
