--- a/linux/T480/.config/i3/i3blocks.conf
+++ b/linux/T480/.config/i3/i3blocks.conf
@@ -1,4 +1,4 @@
-# i3blocks config file
+# i3blocks config file. Default ones are at /usr/share/i3blocks/
 #
 # Please see man i3blocks for a complete reference!
 # The man page is also hosted at http://vivien.github.io/i3blocks
