--- a/linux/T480/.inputrc
+++ b/linux/T480/.inputrc
@@ -22,3 +22,6 @@ $endif
 
 # Case insensitive auto-completion
 # set completion-ignore-case on
+
+# Reload inputrc with C-x C-r. Alternately `bind -f ~/.inputrc` can also be used.
+"\C-x\C-r": re-read-init-file
