--- a/linux/T480/.config/compton/compton.conf
+++ b/linux/T480/.config/compton/compton.conf
@@ -8,10 +8,7 @@ glx-no-rebind-pixmap = true;
 
 
 # Drop shadows
-# If you use this config with i3-gaps, compton will draw shadows on title bars. This is because 
-# i3 creates title bars as windows. I've only been able to circumvent this by removing title bars 
-# completely - see my i3 config files.
-shadow = true;			            # Enabled client-side shadows on windows
+# If you use this config with i3-gaps, compton will draw shadows on title bars. This is because # i3 creates title bars as windows. I've only been able to circumvent this by removing title bars # completely - see my i3 config files.  shadow = true;			            # Enabled client-side shadows on windows
 no-dock-shadow = true;		      # Avoid drawing shadows on dock/panel windows
 no-dnd-shadow = true;		        # Don't draw shadows on drag-and-drop windows
 clear-shadow = true;		        # Zero the part of the shadow's mask behind the window (experimental)
