--- a/linux/T480/.config/i3/i3blocks.conf
+++ b/linux/T480/.config/i3/i3blocks.conf
@@ -48,6 +48,16 @@ interval=1
 signal=10
 command=/usr/share/i3blocks/volume 5 pulse
 
+# Battery indicator
+#
+# The battery instance defaults to 0.
+[battery]
+# label=BAT
+label=🔋
+#instance=1
+interval=3
+
+
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
@@ -114,16 +124,6 @@ interval=3
 
 # [load_average]
 # interval=10
-
-# Battery indicator
-#
-# The battery instance defaults to 0.
-[battery]
-# label=BAT
-label=⚡
-#instance=1
-interval=3
-
 # Date Time
 #
 [time]
