--- a/T480/.config/i3/config
+++ b/T480/.config/i3/config
@@ -54,7 +54,7 @@ bindsym $mod+q mode $close
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 
- bindsym $mod+p exec --no-startup-id i3-dmenu-desktop --dmenu='dmenu -i -fn "Inconsolata 12"'
+ bindsym $mod+p exec --no-startup-id i3-dmenu-desktop --dmenu='dmenu -b -i -fn "Inconsolata 12"'
 bindsym $mod+Shift+d exec dolphin
 
 # change focus
