--- a/T480/.inputrc
+++ b/T480/.inputrc
@@ -1,7 +1,7 @@
 # Change this file instead of /etc/inputrc to change input settings.
 
 # Set vim mode in bash.
-set editing-mode vi
+# set editing-mode vi
 
 # Set this to show current mode. By default string `ins` and `cmd` will distinguish them. Use next
 # commands to modify these strings.
