--- a/T480/.config/i3/i3blocks.conf
+++ b/T480/.config/i3/i3blocks.conf
@@ -41,7 +41,8 @@ markup='⟨'
 # See the script for details.
 [volume]
 # label=VOL
-label=♪
+# label=♪
+label=🎶
 instance=Master
 # instance=PCM
 interval=1
@@ -127,7 +128,7 @@ interval=3
 # Date Time
 #
 [time]
-command=echo "`date +'%a'`, `date +'%b %d'`  `date +'%H:%M'`"
+command=echo $(date +'%a'), $(date +'%b %d')  $(date +'%H:%M')
 # command=echo "`date +'%a %d %b'` <b>`date +'%T'`</b> "; [[ -z "${BLOCK_BUTTON}" ]] || gsimplecal &
 interval=1
 
