T480: `st` will now render all input characters (Delete key) properly.
Signed-off-by: Chinmay Chhajed <chinmay.chhajed@espressif.com>

--- a/T480/.inputrc
+++ b/T480/.inputrc
@@ -27,6 +27,10 @@ $if mode=vi
     Control-l: clear-screen
 $endif
 
+# Try to enable the application keypad when it is called. Some systems
+# need this to enable the arrow keys.
+set enable-keypad on
+
 # Case insensitive auto-completion
 # set completion-ignore-case on
 
