--- a/T480/.gitconfig
+++ b/T480/.gitconfig
@@ -31,7 +31,8 @@
     lo = "log --oneline"
     d = "!diff_in_less() { git diff --color-words --color=always \"$@\" | less -R; }; diff_in_less"
     s = "status"
-    b = "!blame_in_less() { git blame \"$@\" | less -R; }; blame_in_less"
+    ; b = "!blame_in_less() { git blame \"$@\" | less -R; }; blame_in_less"
+    b = "branch"
     sub = "submodule update --init --recursive --progress"
     pulll = "!pull_with_progress() { git pull --progress \"$@\"; }; pull_with_progress"
     sd= "!sub_diff() { git diff --submodule=diff \"$@\" --color=always |less -R; }; sub_diff"
