--- a/T480/.gitconfig
+++ b/T480/.gitconfig
@@ -45,3 +45,11 @@
 [core]
         ; Don't use `$HOME` here!
     excludesfile = ~/.gitignore
+[pull]
+	rebase = false
+	ff = only
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
