--- a/T480/.config/gsimplecal/config
+++ b/T480/.config/gsimplecal/config
@@ -1,7 +1,30 @@
-show_calendar=1
-mark_today=1
-show_week_numbers=1
-close_on_unfocus=1
-mainwindow_position=mouse
-mainwindow_xoffset=-0
-mainwindow_yoffset=20
+# Original Settings
+# show_timezones = 1
+# mainwindow_resizable = 0
+# show_calendar = 1
+# mark_today = 1
+# show_week_numbers = 1
+# close_on_unfocus = 0
+# mainwindow_position = mouse
+# mainwindow_xoffset = -0
+# mainwindow_yoffset = 20
+
+show_calendar = 1
+show_timezones = 1
+show_week_numbers = 0
+mark_today = 1
+close_on_unfocus = 0
+external_viewer = iceowl -showdate "%Y-%m-%d"
+clock_format = %a %d %b %H:%M
+mainwindow_decorated = 0
+mainwindow_keep_above = 1
+mainwindow_sticky = 0
+mainwindow_skip_taskbar = 1
+mainwindow_resizable = 1
+mainwindow_position = mouse
+mainwindow_xoffset = 0
+mainwindow_yoffset = 0
+clock_label = UTC
+clock_tz = :UTC
+clock_label = Local
+clock_tz =
