Bye bye Espressif. You'll be missed.👋
Also Bye bye T480 and welcome Latitude 7480.

--- a/T480/.gitconfig
+++ b/T480/.gitconfig
@@ -7,7 +7,7 @@
 
 [user]
     name = Chinmay Chhajed
-    email = chinmay.chhajed@espressif.com
+    email = chhajedchinmay@gmail.com
 [diff]
     tool = meld
 [difftool]
